<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorSecondary"
    android:padding="@dimen/dp_16">

    <TextView style="@style/HeaderTextStyle"
        android:textColor="@color/white"
        android:text="@string/app_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="@dimen/dp_8"
        android:orientation="vertical">

        <Button style="@style/ButtonStyle"
            android:id="@+id/search_button"
            android:text="@string/search"
            app:icon="@drawable/search"/>

        <Button style="@style/ButtonStyle"
            android:id="@+id/media_button"
            android:text="@string/media_library"
            app:icon="@drawable/media"/>

        <Button style="@style/ButtonStyle"
            android:id="@+id/settings_button"
            android:text="@string/settings"
            app:icon="@drawable/setting"/>
    </LinearLayout>

</LinearLayout>