<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimary"
    android:paddingStart="@dimen/dp_16"
    android:paddingEnd="@dimen/dp_12"
    android:paddingVertical="@dimen/dp_16">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton style="@style/ArrowInHeader"
            android:id="@+id/settings_back"
            tools:ignore="ContentDescription"/>

        <TextView style="@style/HeaderTextStyle"
            android:layout_marginStart="@dimen/dp_12"
            android:text="@string/settings"/>
    </LinearLayout>

    <FrameLayout style="@style/Settings"
        android:layout_marginTop="40dp">

        <TextView style="@style/TextStyle"
            android:layout_gravity="start|center"
            android:text="@string/dark_theme"/>

        <androidx.appcompat.widget.SwitchCompat android:theme="@style/MySwitch"
            android:id="@+id/switch_compat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"/>
    </FrameLayout>

    <FrameLayout style="@style/Settings"
        android:id="@+id/flShareApp">

        <TextView style="@style/TextStyle"
            android:layout_gravity="start|center"
            android:text="@string/share_app"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:src="@drawable/share"/>
    </FrameLayout>

    <FrameLayout style="@style/Settings"
        android:id="@+id/flSupport">

        <TextView style="@style/TextStyle"
            android:layout_gravity="start|center"
            android:text="@string/write_to_support"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:src="@drawable/support"/>
    </FrameLayout>

    <FrameLayout style="@style/Settings"
        android:id="@+id/flTermsOfUse">

        <TextView style="@style/TextStyle"
            android:layout_gravity="start|center"
            android:text="@string/terms_of_use"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:src="@drawable/arrow_2"/>
    </FrameLayout>
</LinearLayout>