<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".creating_playlist.ui.CreatingPlaylistFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.appcompat.widget.Toolbar style="@style/Toolbar"
        android:id="@+id/creating_playlist_toolbar"
        app:navigationIcon="@drawable/arrow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cover_iv_creating_playlist">

        <TextView style="@style/HeaderTextStyle"
            android:layout_marginStart="@dimen/dp_8"
            android:text="@string/new_playlist"/>

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/cover_iv_creating_playlist"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginHorizontal="@dimen/dp_8"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/creating_playlist_toolbar"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintBottom_toTopOf="@id/playlist_name_input_layout"
        android:src="@drawable/playlist_cover_background"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlist_name_input_layout"
        style="@style/TextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_32"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/cover_iv_creating_playlist"
        app:layout_constraintBottom_toTopOf="@id/playlist_description_input_layout"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        android:hint="@string/name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="32"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlist_description_input_layout"
        style="@style/TextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintTop_toBottomOf="@id/playlist_name_input_layout"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline"
        android:hint="@string/description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="100"
            android:maxLines="3"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.68" />

    <androidx.appcompat.widget.AppCompatButton style="@style/HeaderTextStyle"
        android:id="@+id/create_playlist_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/dp_32"
        android:enabled="false"
        android:text="@string/to_create"
        android:textSize="@dimen/font_16"
        android:textColor="@color/white"
        android:background="@drawable/create_playlist_background"/>
    
</androidx.constraintlayout.widget.ConstraintLayout>